$Id$

Version 1.2.1 (09 Apr 2010)
 - Added better error message for unlink error in db_cachedir.
 - Fixed bug [ 2769084 ] xss vulnerability with cat_id in month.php
 - Security Fix: Fixes for cross-site scripting and denial of service.  For
   details of issues:
   http://tasecuritygroup.com/download/SCL-2010-001.txt
 - Removed CSS "overflow:auto" setting for month table cells since it was
   causing unnecessary scrollbars in Chrome.
 - Patch [ 2534090 ] PHP 5.2.8/Seg fault/blank page/Internal Server Error/untimed
 - Patch [ 2261885 ] Missing shebang
 - Patch [ 2261841 ] Fix timebar views
 - Fixed bug: The remember login checkbox on login page would not work
   unless register globals was enabled
 - Fixed bug [ 2157160 ] in week selector wrong weeks
 - Fixed bug [ 2148435 ] Not possible to create/edit layer with duplicates=No
 - Patch [ 2135609 ] Date issues for repeating events in RSS feed
 - Fixed bug [ 2163504 ] usersel.php was not running "register_globals = off".
 - Fixed bug [ 2142564 ] rss_activity_log.php doesn't work with Oracle
 - Fixed bug [ 2135644 ] mb_language error in 1.2.0 prevent login
 - Italian 100% translated by Pierfrancesco Passerini

Version 1.2.0 (27 Sep 2008)
 - Fix bug [ 2138032 ] Invalid DTD
 - Fix typos. Bug Report [ 2138019 ] Missing </tr> in view_entry.php
 - Apply Patch [ 2086918 ] icalendar with multi byte
 - Apply Patch [ 2129844 ] Missing space in day view
 - Apply Patch [ 2126058 ] Color for today's event in week.php
 - Apply Patch [ 2126269 ] Norwegian translation update
 - Apply Patch [ 2117687 ] German updated translation
 - Apply Patch [ 2126001 ] Fixes for upgrade-postgres.sql
 - Add Portuguese_BR_utf8 to includes/translate.php
 - Fix typo. Bug report [2122876] syntax error at "update_translation.pl" update_translation.pl
 - Patch [ 1986759 ] Incorrect date shift logic in view_entry.php
 - Apply PATCH [ 1980001 ] Portuguese_BR translation
 - Fixed NUC URL in edit_nonusers.php. Removed hyperlink and added _NUC_